# sys-arch-server

./: .gitignore  README.md  test_setup.py
.github/workflows/: lint.yml  test.yml
client/: client.py  file_manager.py  main.py  pyproject.toml  server_api.py  states.py  test.py  utils.py
client/files/Числа/: 123
server/: pyproject.toml
server/files/Строки/: strings.txt
server/src/: db.sqlite3  manage.py
server/src/file/: file_types.py  forms.py  views.py
server/src/rest_api/: admin.py  custom_orm.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
server/src/rest_api/migrations/: 0001_initial.py  0002_auto_20210310_1258.py
server/src/rest_api/tests/api/: test_upload.py
server/src/rest_api/tests/factories/: factory.py
server/src/server/: asgi.py  settings.py  urls.py  wsgi.py
server/src/server/file/: forms.py  views.py
src/: .coverage  .coveragerc  Dockerfile  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  test.sh
src/rest_api/: custom_orm.py  db.py  models.py  redirect_views.py  serializers.py  urls.py  utils.py  views.py
src/rest_api/migrations/: 0001_initial.py  0002_auto_20210310_1258.py
src/rest_api/tests/api/: test_upload.py
src/rest_api/views/: __init__.py  authentication.py  category.py  data.py  redirect.py
src/rest_api/views/strategies/: __init__.py  upload.py  utils.py
src/server/: settings.py  urls.py  utils.py
src/tests/api/: test_upload.py
