[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Булат Хазиев <khazievbulatphanzilovich@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
django = "^3.1.6"
psycopg2-binary = "^2.8.6"
drf-yasg = "^1.20.0"
djangorestframework = "^3.12.2"
SQLAlchemy = "^1.3.23"
psycopg2 = "^2.8.6"
django-cors-headers = "^3.7.0"
pytest = "^6.2.2"
coverage = "^5.5"
factory-boy = "^3.2.0"
pytest-django = "^4.1.0"
django-stdimage = "^5.2.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
